<resources>
    <string name="app_name">The Smart Closet</string>
    <string name="server_client_id">1068358583453-jbejq4gngestnhet1u7v736tvpobahg4.apps.googleusercontent.com</string>
    <string name="client_token_id">client_token_id</string>
    <string name="serverPath">"http://localhost:8080/</string>
    <string name="getUserPath">user/get</string>
    <string name="user">user</string>
    <string name="welcomeActivity2">Welcome %s %s</string>
    <string name="server_ip">192.168.1.6</string>
    <string name="no_closet_available">You don\'t have any closets registered yet</string>
    <string name="add_closet_title">Please insert your closet\'s details</string>
    <string name="insert_closet_name">Name</string>
    <string name="insert_rfid_scanner">RFID scanner code</string>
    <string name="insert_location">Location</string>
    <string name="insert_description">Description</string>
    <string name="submit">Submit</string>
    <string name="closet">closet</string>
    <string name="image_description">image_description</string>
    <string name="item_brand_key">Brand</string>
    <string name="item_usage_key">Usage</string>
    <string name="item_recentlyUsed_key">Recently used</string>
    <string name="item">item</string>
    <string name="error_insert_closet">Something went wrong, the closet wat not registered</string>
    <string name="error_insert_item">Something went wrong, the item wat not registered</string>
    <string name="add_closet_success">Closet added successfully</string>
    <string name="insert_closet_id">ID</string>
    <string name="error_assign_closet">something went wrong, failed to assign existing closet</string>
    <string name="delete">Delete</string>
    <string name="stats_title">Statistics of %s</string>
    <string name="stats_custom_title">custom title</string>
    <string name="most_used_key">Most Used Item</string>
    <string name="dummy">None</string>
    <string name="most_used_more">more…</string>
    <string name="favorite_color_key">Favorite Color</string>
    <string name="stats">stats</string>
    <string name="not_initiated">Not initiated yet…</string>
    <string name="no_items_available">This closet doesn\'t have items yet</string>
    <string name="error_get_user">Failed to add closet</string>
    <string name="closet_id">closet_id</string>
    <string name="add_item_type_key">Type</string>
    <string name="add_item_title">Please insert the item\'s details</string>
    <string name="add_item_foundAt_explain">(if the item is in your closet currently, leave with \"Me\")</string>
    <string name="add_item_foundAt_key">Found at</string>
    <string name="add_item_size_key">Size</string>
    <string name="add_item_color_key">Color</string>
    <string name="add_item_foundAt_default">Me</string>
    <string name="error_get_closet">Failed to get closet info</string>
    <string name="item_recentlyUsed_default">Item not used yet</string>
    <string name="item_loan_to">Loan to</string>
    <string name="item_send_reminder">Send Reminder</string>
    <string name="item_id">item_id</string>
    <string name="back_in_the_closet">Back In The Closet</string>
    <string name="ME">Me</string>
    <string name="scan_qr">Scan QR</string>
    <string name="please_scan_the_qr_code">Please Scan The QR Code</string>
    <string name="qrData">qr_data</string>
</resources>
