<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.AddItemActivity">

    <TextView
        android:id="@+id/add_item_title"
        android:layout_width="332dp"
        android:layout_height="43dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/add_item_title"
        android:textSize="@dimen/title" />

    <EditText
        android:id="@+id/add_item_type_val"
        android:layout_width="221dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/add_item_type_key"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/add_item_brand_val"
        android:layout_width="221dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/item_brand_key"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/add_item_color_val"
        android:layout_width="221dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/add_item_color_key"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/add_item_size_val"
        android:layout_width="221dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/add_item_size_key"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/add_item_foundAt_val"
        android:layout_width="221dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/add_item_foundAt_key"
        android:inputType="textPersonName"
        android:text="@string/add_item_foundAt_default" />

    <TextView
        android:id="@+id/add_item_foundAt_explanation"
        android:layout_width="368dp"
        android:layout_height="27dp"
        android:layout_marginStart="8dp"
        android:text="@string/add_item_foundAt_explain" />

    <Button
        android:id="@+id/add_item_submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark"
        android:elevation="4dp"
        android:onClick="submitItem"
        android:text="@string/submit"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/add_item_error_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:padding="15dp"
        android:textAlignment="center"
        android:textColor="@color/error"
        android:visibility="invisible" />

</LinearLayout>