<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/add_closet_title"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/add_closet_title"
        android:textSize="10pt"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:layout_width="4dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/rdBtnExisting"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:baselineAligned="false"
                android:checked="false"
                android:text="Existing" />

            <RadioButton
                android:id="@+id/rdBtnNew"
                android:layout_width="match_parent"
                android:layout_height="13dp"
                android:layout_weight="1"
                android:checked="true"
                android:text="New" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="252dp"
                android:layout_weight="1" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/closet_id_et"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_weight="1"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/insert_closet_id"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/closet_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryDark"
                android:hint="@string/insert_closet_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/closet_location_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryDark"
                android:hint="@string/insert_location"
                android:inputType="text" />

            <EditText
                android:id="@+id/closet_rfid_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:hint="@string/insert_rfid_scanner"
                android:inputType="text" />

            <EditText
                android:id="@+id/closet_description_et"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:breakStrategy="balanced"
                android:fitsSystemWindows="true"
                android:gravity="top"
                android:hint="@string/insert_description"
                android:inputType="textMultiLine"
                android:padding="5dp"
                android:singleLine="false" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimaryDark"
        android:elevation="4dp"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:text="@string/submit"
        android:textColor="#fff"
        android:onClick="submitInfo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_closet_error_text"
        android:padding="15dp"
        android:visibility="invisible"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textColor="@color/error" />
</LinearLayout>