<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/stats_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginTop="28dp"
        android:text="@string/stats_title"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/most_used_key"
        android:layout_width="105dp"
        android:layout_height="29dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="52dp"
        android:text="@string/most_used_key"
        android:textSize="@dimen/stats_values"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stats_title" />

    <TextView
        android:id="@+id/most_used_value"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="52dp"
        android:text="@string/not_initiated"
        android:textSize="@dimen/stats_values"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/most_used_key"
        app:layout_constraintTop_toBottomOf="@+id/stats_title" />

    <TextView
        android:id="@+id/loved_color_key"
        android:layout_width="108dp"
        android:layout_height="56dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="40dp"
        android:text="@string/favorite_color_key"
        android:textSize="@dimen/stats_values"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/most_used_key" />

    <TextView
        android:id="@+id/loved_color_value"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/not_initiated"
        android:textSize="@dimen/stats_values"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.354"
        app:layout_constraintStart_toEndOf="@+id/loved_color_key"
        app:layout_constraintTop_toBottomOf="@+id/most_used_value" />

    <ExpandableListView
        android:id="@+id/exp_list_stats"
        android:layout_width="310dp"
        android:layout_height="306dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="0.5dp"
        android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
        android:paddingTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loved_color_value"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>