<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="171dp"
        android:layout_height="204dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/image_description"
        android:src="@drawable/sclogoyellow"
        app:layout_constraintBottom_toTopOf="@+id/item_brand_key"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.247" />

    <TextView
        android:id="@+id/item_brand_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="8dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/item_usage_key"
        app:layout_constraintEnd_toStartOf="@+id/guideline3" />

    <TextView
        android:id="@+id/item_usage_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="8dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/item_recentlyUsed_key"
        app:layout_constraintEnd_toStartOf="@+id/guideline3" />

    <TextView
        android:id="@+id/item_recentlyUsed_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/item_location"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintGuide_begin="192dp"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_brand_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/item_usage_value"
        app:layout_constraintStart_toStartOf="@+id/guideline3" />


    <TextView
        android:id="@+id/item_usage_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/item_recentlyUsed_value"
        app:layout_constraintStart_toStartOf="@+id/guideline3" />


    <TextView
        android:id="@+id/item_recentlyUsed_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        android:text="@string/item_recentlyUsed_default"
        app:layout_constraintBottom_toTopOf="@+id/item_location"
        app:layout_constraintStart_toStartOf="@+id/guideline3" />

    <TextView
        android:id="@+id/item_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="160dp"
        android:drawableStart="@drawable/location"
        android:gravity="center"
        android:paddingTop="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_loan"
        android:layout_width="142dp"
        android:layout_height="47dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:onClick="openLoanForm"
        android:text="@string/item_loan_to"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_location" />

    <Button
        android:id="@+id/button_reminder"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:enabled="false"
        android:onClick="sendReminder"
        android:text="@string/item_send_reminder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/item_location" />

    <Button
        android:id="@+id/button_set_back"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/back_in_the_closet"
        android:onClick="setItemBackInCloset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_reminder"
        app:layout_constraintVertical_bias="0.571" />

</android.support.constraint.ConstraintLayout>